tests/algorithms/transpiler/Swift/dynamic_programming/all_construct.error
signal: illegal instruction
Swift/Array.swift:419: Fatal error: Array index is out of range

*** Signal 4: Backtracing from 0x7f299a8e58f5... done ***

*** Program crashed: Illegal instruction at 0x00007f299a8e58f5 ***

Thread 0 "main" crashed:

 0      0x00007f299a8e58f5 closure #1 in closure #1 in closure #1 in _assertionFailure(_:_:file:line:flags:) + 309 in libswiftCore.so
 1 [ra] 0x00007f299a8e56e5 closure #1 in closure #1 in _assertionFailure(_:_:file:line:flags:) + 324 in libswiftCore.so
 2 [ra] 0x00007f299a8e555c closure #1 in _assertionFailure(_:_:file:line:flags:) + 379 in libswiftCore.so
 3 [ra] 0x00007f299aa5b505 _assertionFailure(_:_:file:line:flags:) + 276 in libswiftCore.so
 4 [ra] 0x00007f299aa4e289 Array._checkIndex(_:) + 136 in libswiftCore.so
 5 [ra] 0x00007f299aa096ec specialized Array.subscript.getter + 43 in libswiftCore.so
 6 [ra] 0x00007f299a8fb8d0 Array.subscript.getter + 15 in libswiftCore.so
 7 [ra] 0x000055dc73127a07 allConstruct #1 (_:_:) in  + 1798 in main
 8 [ra] 0x000055dc7312a735 main + 612 in main
 9 [ra] 0x00007f29992701ca <unknown> in libc.so.6
10 [ra] 0x00007f299927028b <unknown> in libc.so.6


Registers:

rax 0x0000000000000002  2
rdx 0x0000000000000001  1
rcx 0x0000000000000001  1
rbx 0x000000055dc7bc3f  23048207423
rsi 0x0000000000000000  0
rdi 0x000055dc7bc3f3e0  3b 33 31 3a 2a 2e 6c 68 41 00 00 00 00 00 00 00  ;31:*.lhA·······
rbp 0x00007ffd8700bc10  50 bc 00 87 fd 7f 00 00 e5 56 8e 9a 29 7f 00 00  P¼··ý···åV··)···
rsp 0x00007ffd8700bc00  1b 00 00 00 00 00 00 00 a3 01 00 00 00 00 00 00  ········£·······
 r8 0x000055dc7bc0a010  05 00 07 00 01 00 04 00 07 00 03 00 01 00 02 00  ················
 r9 0x0000000000000007  7
r10 0x000055dc7bc3f3f0  3f bc c7 5d 05 00 00 00 bb 7f 30 1a 79 6c 43 93  ?¼Ç]····»·0·ylC·
r11 0x93436c791a307fbb  10611444414401249211
r12 0x00007f299ad10700  00 02 00 00 00 00 00 00 b4 3c d5 9a 29 7f 00 00  ········´<Õ·)···
r13 0x00007f299aa4e200  55 48 89 e5 48 39 7e 10 7c 07 48 85 ff 78 3a 5d  UH·åH9~·|·H·ÿx:]
r14 0x0000000000000001  1
r15 0x000000000000000b  11
rip 0x00007f299a8e58f5  0f 0b 48 83 ec 08 48 8d 05 be f8 45 00 48 8d 3d  ··H·ì·H··¾øE·H·=

rflags 0x0000000000010206  PF

cs 0x0033  fs 0x0000  gs 0x0000


Images (48 omitted):

0x000055dc73123000–0x000055dc7312c8e0 3531f234ea59b887d23bdf279eb7fba596e3fa3c main            /tmp/TestSwiftTranspiler_Algorithms_Golden302_dynamic_programming_all_construct937824079/001/main
0x00007f2999246000–0x00007f29993f5cb9 282c2c16e7b6600b0b22ea0c99010d2795752b5f libc.so.6       /usr/lib/x86_64-linux-gnu/libc.so.6
0x00007f299a77f000–0x00007f299ad0e2d8 7bd479aa5e6f57e6772da70789dcdfa25d5e29b0 libswiftCore.so /root/.local/share/mise/installs/swift/6.1/usr/lib/swift/linux/libswiftCore.so

Backtrace took 0.13s

